--- a/gerador_certidoes.ipynb
+++ b/gerador_certidoes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,28 +11,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_clientes = pd.read_excel('Pasta3.xlsx', sheet_name='config_clientes', index_col=0)\n",
-    "df_cert_config = pd.read_excel('Pasta3.xlsx', sheet_name='config_certidoes', index_col=0)"
+    "df_clientes = pd.read_excel('gestao_monitoramento.xlsx', sheet_name='config_clientes', index_col=0)\n",
+    "df_cert_config = pd.read_excel('gestao_monitoramento.xlsx', sheet_name='config_certidoes', index_col=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "nome: Teste LTDA, cnpj: 1020304050, pasta_destino: clientes/testeltda/, certidoes_cadastradas: CEF-CRFGTS, TJDFT-CNFR, CGU-CNC, FN-CNDTF, GDF-CND, GDF-DIF, TST-CNDT, CNJ-CNIADM\n",
+      "nome: Auto LTDA, cnpj: 2210203040, pasta_destino: clientes/autodata/, certidoes_cadastradas: CEF-CRFGTS, TJDFT-CNFR, CGU-CNC, FN-CNDTF, GDF-CND, GDF-DIF, TST-CNDT, CNJ-CNIADM, TESTE-TESTE\n",
       "-------\n",
-      "nome: Bot MEI, cnpj: 1010202041, pasta_destino: clientes/botmei/, certidoes_cadastradas: CEF-CRFGTS, TJDFT-CNFR, CGU-CNC, FN-CNDTF, GDF-CND, GDF-DIF, TST-CNDT, CNJ-CNIADM\n",
+      "nome: Bot MEI, cnpj: 1010202041, pasta_destino: clientes/botmei/, certidoes_cadastradas: CEF-CRFGTS, TJDFT-CNFR, CGU-CNC, FN-CNDTF, GDF-CND, GDF-DIF, TST-CNDT, CNJ-CNIADM, TESTE-TESTE\n",
       "-------\n",
-      "nome: Auto LTDA, cnpj: 2210203040, pasta_destino: clientes/autodata/, certidoes_cadastradas: CEF-CRFGTS, TJDFT-CNFR, CGU-CNC, FN-CNDTF, GDF-CND, GDF-DIF, TST-CNDT, CNJ-CNIADM\n",
+      "nome: Teste LTDA, cnpj: 1020304050, pasta_destino: clientes/testeltda/, certidoes_cadastradas: CEF-CRFGTS, TJDFT-CNFR, CGU-CNC, FN-CNDTF, GDF-CND, GDF-DIF, TST-CNDT, CNJ-CNIADM, TESTE-TESTE\n",
+      "-------\n",
+      "nome: Drogaria Rosário, cnpj: 447821000170, pasta_destino: clientes/drosario/, certidoes_cadastradas: CEF-CRFGTS, TJDFT-CNFR, CGU-CNC, FN-CNDTF, GDF-CND, GDF-DIF, TST-CNDT, CNJ-CNIADM, TESTE-TESTE\n",
+      "-------\n",
+      "nome: Big Box, cnpj: 3696869000100, pasta_destino: clientes/bigbox/, certidoes_cadastradas: CEF-CRFGTS, TJDFT-CNFR, CGU-CNC, FN-CNDTF, GDF-CND, GDF-DIF, TST-CNDT, CNJ-CNIADM, TESTE-TESTE\n",
+      "-------\n",
+      "nome: Cascol Combustíveis, cnpj: 306597000105, pasta_destino: clientes/cascol/, certidoes_cadastradas: CEF-CRFGTS, TJDFT-CNFR, CGU-CNC, FN-CNDTF, GDF-CND, GDF-DIF, TST-CNDT, CNJ-CNIADM, TESTE-TESTE\n",
       "-------\n"
      ]
     }
@@ -50,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -58,21 +64,21 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Index: 24 entries, TLTDA to AUTOLTDA\n",
+      "Index: 27 entries, TLTDA to AUTOLTDA\n",
       "Data columns (total 9 columns):\n",
       " #   Column           Non-Null Count  Dtype \n",
       "---  ------           --------------  ----- \n",
-      " 0   NOME_CLIENTE     24 non-null     object\n",
-      " 1   CNPJ             24 non-null     int64 \n",
-      " 2   NOME_COMPLETO    24 non-null     object\n",
-      " 3   NOME_ARQUIVO     24 non-null     object\n",
-      " 4   PASTA_DESTINO    24 non-null     object\n",
-      " 5   CERTIDAO_ID      24 non-null     object\n",
-      " 6   TITULO_CERTIDAO  24 non-null     object\n",
-      " 7   ORGAO            24 non-null     object\n",
-      " 8   URL              24 non-null     object\n",
+      " 0   NOME_CLIENTE     27 non-null     object\n",
+      " 1   CNPJ             27 non-null     int64 \n",
+      " 2   NOME_COMPLETO    27 non-null     object\n",
+      " 3   NOME_ARQUIVO     27 non-null     object\n",
+      " 4   PASTA_DESTINO    27 non-null     object\n",
+      " 5   CERTIDAO_ID      27 non-null     object\n",
+      " 6   TITULO_CERTIDAO  27 non-null     object\n",
+      " 7   ORGAO            27 non-null     object\n",
+      " 8   URL              27 non-null     object\n",
       "dtypes: int64(1), object(8)\n",
-      "memory usage: 1.9+ KB\n"
+      "memory usage: 2.1+ KB\n"
      ]
     },
     {
@@ -217,6 +223,18 @@
        "      <td>https://www.cnj.jus.br/improbidade_adm/consult...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>TLTDA</th>\n",
+       "      <td>Teste LTDA</td>\n",
+       "      <td>1020304050</td>\n",
+       "      <td>Teste Limitado LTDA</td>\n",
+       "      <td>TesteInexistente</td>\n",
+       "      <td>clientes/testeltda/</td>\n",
+       "      <td>TESTE-TESTE</td>\n",
+       "      <td>Certidão inexistente para teste</td>\n",
+       "      <td>TEST</td>\n",
+       "      <td>www.teste.com.br</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>BOTMEI</th>\n",
        "      <td>Bot MEI</td>\n",
        "      <td>1010202041</td>\n",
@@ -313,6 +331,18 @@
        "      <td>https://www.cnj.jus.br/improbidade_adm/consult...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>BOTMEI</th>\n",
+       "      <td>Bot MEI</td>\n",
+       "      <td>1010202041</td>\n",
+       "      <td>Bot de Certidao MEI</td>\n",
+       "      <td>TesteInexistente</td>\n",
+       "      <td>clientes/botmei/</td>\n",
+       "      <td>TESTE-TESTE</td>\n",
+       "      <td>Certidão inexistente para teste</td>\n",
+       "      <td>TEST</td>\n",
+       "      <td>www.teste.com.br</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>AUTOLTDA</th>\n",
        "      <td>Auto LTDA</td>\n",
        "      <td>2210203040</td>\n",
@@ -407,6 +437,18 @@
        "      <td>Certidão Negativa de Improbidade Administrativ...</td>\n",
        "      <td>CNJ</td>\n",
        "      <td>https://www.cnj.jus.br/improbidade_adm/consult...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AUTOLTDA</th>\n",
+       "      <td>Auto LTDA</td>\n",
+       "      <td>2210203040</td>\n",
+       "      <td>Auto data LTDA</td>\n",
+       "      <td>TesteInexistente</td>\n",
+       "      <td>clientes/autodata/</td>\n",
+       "      <td>TESTE-TESTE</td>\n",
+       "      <td>Certidão inexistente para teste</td>\n",
+       "      <td>TEST</td>\n",
+       "      <td>www.teste.com.br</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -423,6 +465,7 @@
        "TLTDA        Teste LTDA  1020304050  Teste Limitado LTDA   \n",
        "TLTDA        Teste LTDA  1020304050  Teste Limitado LTDA   \n",
        "TLTDA        Teste LTDA  1020304050  Teste Limitado LTDA   \n",
+       "TLTDA        Teste LTDA  1020304050  Teste Limitado LTDA   \n",
        "BOTMEI          Bot MEI  1010202041  Bot de Certidao MEI   \n",
        "BOTMEI          Bot MEI  1010202041  Bot de Certidao MEI   \n",
        "BOTMEI          Bot MEI  1010202041  Bot de Certidao MEI   \n",
@@ -431,6 +474,8 @@
        "BOTMEI          Bot MEI  1010202041  Bot de Certidao MEI   \n",
        "BOTMEI          Bot MEI  1010202041  Bot de Certidao MEI   \n",
        "BOTMEI          Bot MEI  1010202041  Bot de Certidao MEI   \n",
+       "BOTMEI          Bot MEI  1010202041  Bot de Certidao MEI   \n",
+       "AUTOLTDA      Auto LTDA  2210203040       Auto data LTDA   \n",
        "AUTOLTDA      Auto LTDA  2210203040       Auto data LTDA   \n",
        "AUTOLTDA      Auto LTDA  2210203040       Auto data LTDA   \n",
        "AUTOLTDA      Auto LTDA  2210203040       Auto data LTDA   \n",
@@ -450,6 +495,7 @@
        "TLTDA                                     Comprovante DIF GDF   \n",
        "TLTDA                                         CND Trabalhista   \n",
        "TLTDA         CN Impropidade Administrativa e Inelegibilidade   \n",
+       "TLTDA                                        TesteInexistente   \n",
        "BOTMEI                                                CR FGTS   \n",
        "BOTMEI                              CN Falencia e Recuperacao   \n",
        "BOTMEI      CN Correcional (ePAD, CGU-PJ, CEIS, CNEP e CEPIM)   \n",
@@ -458,6 +504,7 @@
        "BOTMEI                                    Comprovante DIF GDF   \n",
        "BOTMEI                                        CND Trabalhista   \n",
        "BOTMEI        CN Impropidade Administrativa e Inelegibilidade   \n",
+       "BOTMEI                                       TesteInexistente   \n",
        "AUTOLTDA                                              CR FGTS   \n",
        "AUTOLTDA                            CN Falencia e Recuperacao   \n",
        "AUTOLTDA    CN Correcional (ePAD, CGU-PJ, CEIS, CNEP e CEPIM)   \n",
@@ -466,33 +513,37 @@
        "AUTOLTDA                                  Comprovante DIF GDF   \n",
        "AUTOLTDA                                      CND Trabalhista   \n",
        "AUTOLTDA      CN Impropidade Administrativa e Inelegibilidade   \n",
+       "AUTOLTDA                                     TesteInexistente   \n",
        "\n",
-       "                  PASTA_DESTINO CERTIDAO_ID  \\\n",
-       "CLIENTE_ID                                    \n",
-       "TLTDA       clientes/testeltda/  CEF-CRFGTS   \n",
-       "TLTDA       clientes/testeltda/  TJDFT-CNFR   \n",
-       "TLTDA       clientes/testeltda/     CGU-CNC   \n",
-       "TLTDA       clientes/testeltda/    FN-CNDTF   \n",
-       "TLTDA       clientes/testeltda/     GDF-CND   \n",
-       "TLTDA       clientes/testeltda/     GDF-DIF   \n",
-       "TLTDA       clientes/testeltda/    TST-CNDT   \n",
-       "TLTDA       clientes/testeltda/  CNJ-CNIADM   \n",
-       "BOTMEI         clientes/botmei/  CEF-CRFGTS   \n",
-       "BOTMEI         clientes/botmei/  TJDFT-CNFR   \n",
-       "BOTMEI         clientes/botmei/     CGU-CNC   \n",
-       "BOTMEI         clientes/botmei/    FN-CNDTF   \n",
-       "BOTMEI         clientes/botmei/     GDF-CND   \n",
-       "BOTMEI         clientes/botmei/     GDF-DIF   \n",
-       "BOTMEI         clientes/botmei/    TST-CNDT   \n",
-       "BOTMEI         clientes/botmei/  CNJ-CNIADM   \n",
-       "AUTOLTDA     clientes/autodata/  CEF-CRFGTS   \n",
-       "AUTOLTDA     clientes/autodata/  TJDFT-CNFR   \n",
-       "AUTOLTDA     clientes/autodata/     CGU-CNC   \n",
-       "AUTOLTDA     clientes/autodata/    FN-CNDTF   \n",
-       "AUTOLTDA     clientes/autodata/     GDF-CND   \n",
-       "AUTOLTDA     clientes/autodata/     GDF-DIF   \n",
-       "AUTOLTDA     clientes/autodata/    TST-CNDT   \n",
-       "AUTOLTDA     clientes/autodata/  CNJ-CNIADM   \n",
+       "                  PASTA_DESTINO  CERTIDAO_ID  \\\n",
+       "CLIENTE_ID                                     \n",
+       "TLTDA       clientes/testeltda/   CEF-CRFGTS   \n",
+       "TLTDA       clientes/testeltda/   TJDFT-CNFR   \n",
+       "TLTDA       clientes/testeltda/      CGU-CNC   \n",
+       "TLTDA       clientes/testeltda/     FN-CNDTF   \n",
+       "TLTDA       clientes/testeltda/      GDF-CND   \n",
+       "TLTDA       clientes/testeltda/      GDF-DIF   \n",
+       "TLTDA       clientes/testeltda/     TST-CNDT   \n",
+       "TLTDA       clientes/testeltda/   CNJ-CNIADM   \n",
+       "TLTDA       clientes/testeltda/  TESTE-TESTE   \n",
+       "BOTMEI         clientes/botmei/   CEF-CRFGTS   \n",
+       "BOTMEI         clientes/botmei/   TJDFT-CNFR   \n",
+       "BOTMEI         clientes/botmei/      CGU-CNC   \n",
+       "BOTMEI         clientes/botmei/     FN-CNDTF   \n",
+       "BOTMEI         clientes/botmei/      GDF-CND   \n",
+       "BOTMEI         clientes/botmei/      GDF-DIF   \n",
+       "BOTMEI         clientes/botmei/     TST-CNDT   \n",
+       "BOTMEI         clientes/botmei/   CNJ-CNIADM   \n",
+       "BOTMEI         clientes/botmei/  TESTE-TESTE   \n",
+       "AUTOLTDA     clientes/autodata/   CEF-CRFGTS   \n",
+       "AUTOLTDA     clientes/autodata/   TJDFT-CNFR   \n",
+       "AUTOLTDA     clientes/autodata/      CGU-CNC   \n",
+       "AUTOLTDA     clientes/autodata/     FN-CNDTF   \n",
+       "AUTOLTDA     clientes/autodata/      GDF-CND   \n",
+       "AUTOLTDA     clientes/autodata/      GDF-DIF   \n",
+       "AUTOLTDA     clientes/autodata/     TST-CNDT   \n",
+       "AUTOLTDA     clientes/autodata/   CNJ-CNIADM   \n",
+       "AUTOLTDA     clientes/autodata/  TESTE-TESTE   \n",
        "\n",
        "                                              TITULO_CERTIDAO  \\\n",
        "CLIENTE_ID                                                      \n",
@@ -504,6 +555,7 @@
        "TLTDA       Cadastro Fiscal do Distrito Federal - Comprova...   \n",
        "TLTDA               Certidão Negativa de Débitos Trabalhistas   \n",
        "TLTDA       Certidão Negativa de Improbidade Administrativ...   \n",
+       "TLTDA                         Certidão inexistente para teste   \n",
        "BOTMEI              Certificado de Regularidade do FGTS - CRF   \n",
        "BOTMEI      Certidão Negativa de Distribuição (ações de Fa...   \n",
        "BOTMEI      Certidão negativa correcional (ePAD, CGU-PJ, C...   \n",
@@ -512,6 +564,7 @@
        "BOTMEI      Cadastro Fiscal do Distrito Federal - Comprova...   \n",
        "BOTMEI              Certidão Negativa de Débitos Trabalhistas   \n",
        "BOTMEI      Certidão Negativa de Improbidade Administrativ...   \n",
+       "BOTMEI                        Certidão inexistente para teste   \n",
        "AUTOLTDA            Certificado de Regularidade do FGTS - CRF   \n",
        "AUTOLTDA    Certidão Negativa de Distribuição (ações de Fa...   \n",
        "AUTOLTDA    Certidão negativa correcional (ePAD, CGU-PJ, C...   \n",
@@ -520,6 +573,7 @@
        "AUTOLTDA    Cadastro Fiscal do Distrito Federal - Comprova...   \n",
        "AUTOLTDA            Certidão Negativa de Débitos Trabalhistas   \n",
        "AUTOLTDA    Certidão Negativa de Improbidade Administrativ...   \n",
+       "AUTOLTDA                      Certidão inexistente para teste   \n",
        "\n",
        "                       ORGAO  \\\n",
        "CLIENTE_ID                     \n",
@@ -531,6 +585,7 @@
        "TLTDA                    GDF   \n",
        "TLTDA                    TST   \n",
        "TLTDA                    CNJ   \n",
+       "TLTDA                   TEST   \n",
        "BOTMEI                   CEF   \n",
        "BOTMEI                 TJDFT   \n",
        "BOTMEI                   CGU   \n",
@@ -539,6 +594,7 @@
        "BOTMEI                   GDF   \n",
        "BOTMEI                   TST   \n",
        "BOTMEI                   CNJ   \n",
+       "BOTMEI                  TEST   \n",
        "AUTOLTDA                 CEF   \n",
        "AUTOLTDA               TJDFT   \n",
        "AUTOLTDA                 CGU   \n",
@@ -547,6 +603,7 @@
        "AUTOLTDA                 GDF   \n",
        "AUTOLTDA                 TST   \n",
        "AUTOLTDA                 CNJ   \n",
+       "AUTOLTDA                TEST   \n",
        "\n",
        "                                                          URL  \n",
        "CLIENTE_ID                                                     \n",
@@ -558,6 +615,7 @@
        "TLTDA       https://agnet.fazenda.df.gov.br/area.cfm?id_ar...  \n",
        "TLTDA           https://cndt-certidao.tst.jus.br/inicio.faces  \n",
        "TLTDA       https://www.cnj.jus.br/improbidade_adm/consult...  \n",
+       "TLTDA                                        www.teste.com.br  \n",
        "BOTMEI      https://consulta-crf.caixa.gov.br/consultacrf/...  \n",
        "BOTMEI           https://cnc.tjdft.jus.br/solicitacao-externa  \n",
        "BOTMEI                          https://certidoes.cgu.gov.br/  \n",
@@ -566,6 +624,7 @@
        "BOTMEI      https://agnet.fazenda.df.gov.br/area.cfm?id_ar...  \n",
        "BOTMEI          https://cndt-certidao.tst.jus.br/inicio.faces  \n",
        "BOTMEI      https://www.cnj.jus.br/improbidade_adm/consult...  \n",
+       "BOTMEI                                       www.teste.com.br  \n",
        "AUTOLTDA    https://consulta-crf.caixa.gov.br/consultacrf/...  \n",
        "AUTOLTDA         https://cnc.tjdft.jus.br/solicitacao-externa  \n",
        "AUTOLTDA                        https://certidoes.cgu.gov.br/  \n",
@@ -573,10 +632,11 @@
        "AUTOLTDA    https://ww1.receita.fazenda.df.gov.br/cidadao/...  \n",
        "AUTOLTDA    https://agnet.fazenda.df.gov.br/area.cfm?id_ar...  \n",
        "AUTOLTDA        https://cndt-certidao.tst.jus.br/inicio.faces  \n",
-       "AUTOLTDA    https://www.cnj.jus.br/improbidade_adm/consult...  "
+       "AUTOLTDA    https://www.cnj.jus.br/improbidade_adm/consult...  \n",
+       "AUTOLTDA                                     www.teste.com.br  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -613,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -623,6 +683,14 @@
     "from datetime import datetime, timedelta\n",
     "import os  # Importando a biblioteca os\n",
     "from babel.dates import format_date\n",
+    "\n",
+    "\n",
+    "# Definindo as datas de início e validade\n",
+    "data_inicio_min = datetime(2024, 9, 1)\n",
+    "data_inicio_max = datetime(2024, 10, 5)\n",
+    "data_validade_min = datetime(2024, 11, 10)\n",
+    "data_validade_max = datetime(2024, 11, 17)\n",
+    "\n",
     "\n",
     "def gerar_data_aleatoria(inicio, fim):\n",
     "    return inicio + timedelta(days=random.randint(0, (fim - inicio).days))\n",
@@ -715,11 +783,6 @@
     "    arquivo_nome = f\"{data_inicio.strftime('%Y-%m-%d')}_{nome_arquivo}.pdf\"\n",
     "    pdf.output(os.path.join(pasta_destino, arquivo_nome))  # Usando os.path.join para criar o caminho\n",
     "\n",
-    "# Definindo as datas de início e validade\n",
-    "data_inicio_min = datetime(2024, 9, 1)\n",
-    "data_inicio_max = datetime(2024, 10, 5)\n",
-    "data_validade_min = datetime(2024, 11, 7)\n",
-    "data_validade_max = datetime(2024, 11, 15)\n",
     "\n",
     "# Iterando sobre cada linha do DataFrame\n",
     "for index, row in df_resultado.iterrows():\n",
@@ -743,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
