--- a/db_monitor.ipynb
+++ b/db_monitor.ipynb
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 333,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -441,7 +441,7 @@
    "source": [
     "df_monitor = pd.read_excel(gestao_monitoramento, sheet_name='db_monitor')\n",
     "df_monitor.info()\n",
-    "df_monitor.head()"
+    "df_monitor.head()\n"
    ]
   },
   {
